2003-11-06  Teodor Zlatanov  <tzz@lifelogs.com> suggested by Jean-Marc Lasgouttes <Jean-Marc.Lasgouttes@inria.fr>

	* gnus.el (gnus-install-group-spam-parameters): fixed parameters
	to list spamoracle as well

	* spam.el (spam-spamoracle): doc change

2003-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-score.el (gnus-decay-score): Protect against arithmetic
	errors.  Tiny patch from Norbert Koch <viteno@xemacs.org>.

2003-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el
	(spam-log-processing-to-registry): improved message and comments
	(spam-log-unregistration-needed-p): new function
	(spam-ifile-register-spam-routine)
	(spam-ifile-register-ham-routine, spam-stat-register-spam-routine)
	(spam-stat-register-ham-routine)
	(spam-blacklist-register-routine)
	(spam-whitelist-register-routine)
	(spam-bogofilter-register-spam-routine)
	(spam-bogofilter-register-ham-routine)
	(spam-spamoracle-learn-ham, spam-spamoracle-learn-spam): change
	spam-log-processing-to-registry invocations appropriately

2003-10-31  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-kerberos4-open): Ignore output from ATHENA imtest.
	Tiny patch from Derek Atkins <warlord@MIT.EDU>.
	(imap-process-connection-type): Improve docstring.  Suggested by
	Derek Atkins <warlord@MIT.EDU>.

2003-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (autoload): autoload the gnus-registry functions we'll
	need
	(spam-log-to-registry): new variable for interfacing with the
	gnus-registry
	(spam-install-hooks): variable had the wrong customization group
	(spam-fetch-field-message-id-fast): convenience function for fetch
	a message ID quickly
	(spam-log-processing-to-registry): new function
	(spam-ifile-register-spam-routine)
	(spam-ifile-register-ham-routine, spam-stat-register-spam-routine)
	(spam-stat-register-ham-routine)
	(spam-blacklist-register-routine)
	(spam-whitelist-register-routine)
	(spam-bogofilter-register-spam-routine)
	(spam-bogofilter-register-ham-routine)